create new pages for admin panel

--- a/src/admin-panel/add-client-pending-transcation.html
+++ b/src/admin-panel/add-client-pending-transcation.html
@@ -133,7 +133,10 @@
                 <div class="content">
                     <div class="container mt-5 pt-5">
                         <div class="serach-box d-flex align-items-center justify-content-between">
-                            <p class="text-black fs-18 mb-2 fw-600 ">Client’s Profile</p>
+                            <p class="text-black fs-18 mb-2 fw-600 ">
+                                <img src="../../images/left-arrow-black.svg" alt="Add" style="width:16px;" class="me-1 icon">
+                                Client’s Profile
+                            </p>
                             <!-- <h3 class="fw-600"></h3> -->
                           
                                 <img class="" src="../images/search.svg">
