--- a/src/admin-panel/admin-panel-2.html
+++ b/src/admin-panel/admin-panel-2.html
@@ -137,8 +137,10 @@
                 <div class="content">
                     <div class="container pt-4">
                         <div class="serach-box d-flex align-items-center justify-content-between">
-                            <p class="text-black fs-18 mb-2 fw-600 ">Client’s
-                                Profile</p>
+                            <p class="text-black fs-18 mb-2 fw-600 ">
+                                <img src="../../images/left-arrow-black.svg" alt="Add" style="width:16px;" class="me-1 icon">
+                                Client’s Profile
+                            </p>
                             <!-- <h3 class="fw-600"></h3> -->
 
                             <img class src="../images/search.svg">
@@ -259,10 +261,8 @@
                                     <div class="serach-box">
 
                                         <div class="d-flex align-items-center justify-content-between mb-3">
-                                            <h3 class="d-block d-md-none mb-0">Which
-                                                policy can we help you with</h3>
-                                            <h3 class="d-none d-md-block mb-0">Which
-                                                policy may I help you with</h3>
+                                            <h3 class="d-block d-md-none mb-0">Which policy you would like to see and update</h3>
+                                            <h3 class="d-none d-md-block mb-0">Which policy you would like to see and update</h3>
 
 
                                             <div class="d-flex align-items-center"><a href=""
@@ -288,7 +288,7 @@
                                                             class="d-flex justify-content-between align-items-center mb-3">
                                                             <a href="" class="fs-16 text-black fw-bold">
 
-                                                                All Notes
+                                                                Filter
                                                             </a>
 
                                                             <h4 class="text-uppercase fs-14 text-blue">
@@ -1846,10 +1846,10 @@
                 <div class="modal fade" id="exampleModalToggle1" aria-hidden="true"
                     aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
                     <div class="modal-dialog modal-dialog-centered modal-lg-lg ">
-                        <div class="modal-content">
+                        <div class="modal-content border-0">
                             <div class="modal-header border-0 d-block">
 
-                                <h4 class="title fs-20 fw-600 mb-0 mx-auto text-center mt-3 ">
+                                <h4 class="title fs-20 fw-600 mb-0 mx-auto text-center text-black mt-3 ">
                                     Select which policy you want to shop around
                                 </h4>
 
