--- a/src/admin-panel/entry-module/logInAdmin-1.html
+++ b/src/admin-panel/entry-module/logInAdmin-1.html
@@ -180,7 +180,7 @@
 
 
                                         <div class="col-12 text-center mt-4">
-                                            <a href="" class="text-blue text-uppercase fw-500">
+                                            <a href="logInAdmin-3.html" class="text-blue text-uppercase fw-500">
                                                 Forgot Password?
                                             </a>
                                         </div>
