Claim and billing design

--- a/src/client-profile/claim-3-1.html
+++ b/src/client-profile/claim-3-1.html
@@ -144,31 +144,21 @@
                             <p class="user-welcome mt-2">Hey! My Name is Anne
                             </p>
                         </div>
-                        <h3 class="title  text-center">Is there a specific glass repair company you want to use?</h3>
+                        <h3 class="title  text-center">Select Glass Needs Below</h3>
 
                         <form class="mt-4">
-                            <div class="container-wrapper-md">
+                            <div class="contain-wrapper-sm">
                                 <div class="d-flex flex-wrap justify-content-center claim-section ">
-                                    <label class="checkbox-inline squar-boxes mb-0" for="Yes">
+                                    <label class="checkbox-inline squar-boxes  flex-grow-1 mb-0" for="Yes">
                                         <input class="checkbox-control" type="radio" name="glass-damage" value="" id="Yes" checked>
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label fs-16">
-                                            <img src="../images/claim-icons/Yes_Active.svg" alt="" class="active" />
-                                            <img src="../images/claim-icons/Yes_Inactive.svg" alt="" class="offline" />
-                                            Yes
+                                            <img src="../images/claim-icons/glass-damage-active.svg" alt="" class="active" />
+                                            <img src="../images/claim-icons/glass-damage-inactive.svg" alt="" class="offline" />
+                                            Needs Repair
                                         </span>
                                     </label>
-                                    <label class="checkbox-inline squar-boxes mb-0" for="No">
-                                        <input class="checkbox-control" type="radio" name="glass-damage" value="" id="No">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label fs-16">
-                                            <img src="../images/claim-icons/No_Active.svg" alt=""
-                                                class="active" />
-                                            <img src="../images/claim-icons/No_Inactive.svg" alt="" class="offline" />
-                                            No
-                                        </span>
-                                    </label>
-                                    <label class="checkbox-inline squar-boxes mb-0" for="repaired">
+                                    <label class="checkbox-inline squar-boxes flex-grow-1 mb-0" for="repaired">
                                         <input class="checkbox-control" type="radio" name="glass-damage" value="" id="repaired">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label fs-16">
