--- a/src/client-profile/claim-9.html
+++ b/src/client-profile/claim-9.html
@@ -148,18 +148,128 @@
 
                         <form class="mt-4">
                             <div class="contain-wrapper-sm d-flex justify-content-center">
-
-
-                               <button type="submit" class="btn btn-primary  mx-3 mt-4 mt-sm-0"><span>Yes</span>
-                                </button>
-                                <button class="btn btn-outline-primary mt-4 mt-sm-0 mx-3"><span>No</span>
-                                </button>
+                                <div class="row w-100">
+                                    <div class="col-6">
+                                        <label class="radio-inline w-100 radio-btn" for="living2Yes">
+                                            <input class="radio-control" type="radio" name="living2" value=""
+                                                id="living2Yes">
+                                            <span class="radio-custom "></span>
+                                            <span class="radio-label text-center fs-14 w-100">Yes</span>
+                                        </label>
+                                    </div>
+                                    <div class="col-6">
+                                        <label class="radio-inline w-100 radio-btn" for="living2No">
+                                            <input class="radio-control" type="radio" name="living2" value=""
+                                                id="living2No" checked>
+                                            <span class="radio-custom"></span>
+                                            <span class="radio-label text-center w-100 fs-14">No</span>
+                                        </label>
+                                    </div>
+                                </div>
                             </div>
-                        </form>
 
+                            <div class="contain-wrapper-sm claim-additional-info mt-4 bg-white border border-1">
+
+
+                                <div class="blue-card">
+                                    <div class="row g-3">
+                                        <div class="col-12 mb-2">
+                                            <label class="label d-flex align-items-center">
+                                                <span class="fs-18">Injured 1</span>
+                                                <a href="" class="ms-auto"><img src="../images/delete.svg"></a>
+                                            </label>
+                                        </div>
+                                        <div class="col-md-4 mt-md-0">
+                                            <div class="form-group">
+                                                <label class="">
+                                                    <span class="fs-16">First Name <span
+                                                            class="text-danger">*</span></span>
+                                                </label>
+                                                <input type="text" placeholder="First Name" class="form-control">
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-4 mt-md-0">
+                                            <div class="form-group">
+                                                <label class="">
+                                                    <span class="fs-16">Last Name <span
+                                                            class="text-danger">*</span></span>
+                                                </label>
+                                                <input type="text" placeholder="Last Name" class="form-control">
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-4 mt-md-0">
+                                            <div class="form-group">
+                                                <label class="">
+                                                    <span class="fs-16">Phone Number <span
+                                                            class="text-danger">*</span></span>
+                                                </label>
+                                                <input type="text" placeholder="Phone Number" class="form-control">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <div class="blue-card mt-3">
+                                    <div class="row g-3">
+
+                                        <div class="col-12 mb-2">
+                                            <label class="label d-flex align-items-center">
+                                                <span class="fs-18">Injured 2</span>
+                                                <a href="" class="ms-auto"><img src="../images/delete.svg"></a>
+                                            </label>
+                                        </div>
+
+                                        <div class="col-md-4 mt-md-0">
+                                            <div class="form-group">
+                                                <label class="">
+                                                    <span class="fs-16">First Name <span
+                                                            class="text-danger">*</span></span>
+                                                </label>
+                                                <input type="text" placeholder="First Name" class="form-control">
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-4 mt-md-0">
+                                            <div class="form-group">
+                                                <label class="">
+                                                    <span class="fs-16">Last Name <span
+                                                            class="text-danger">*</span></span>
+                                                </label>
+                                                <input type="text" placeholder="Last Name" class="form-control">
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-4 mt-md-0">
+                                            <div class="form-group">
+                                                <label class="">
+                                                    <span class="fs-16">Phone Number <span
+                                                            class="text-danger">*</span></span>
+                                                </label>
+                                                <input type="text" placeholder="Phone Number" class="form-control">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <a class="btn-add align-items-center mt-3 px-0" href="#">
+                                    <img src="../images/add-pluse-circle.svg" alt="Add" class="icon">
+                                    <span>Add Injured</span>
+                                </a>
+                            </div>
+
+
+
+                            <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
+                            </button>
+                        </form>
                     </div>
+
                 </div>
             </div>
+        </div>
     </main>
 
     <script src="../js/jquery.min.js"></script>
